--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
+    <script src='main.js'></script>
     <h1 id ='something'>Project</h1>
 
     <!-- Optional JavaScript -->
