--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a class="dropdown-item" href="CrossWord.html">Crossword</a>
           <a class="dropdown-item" href="WordSearch.html">Word Search</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Descripton</a>
+          <a class="dropdown-item" href="Description.html">Descripton</a>
         </div>
       </li>
       <li class="nav-item">
