--- a/Description.html
+++ b/Description.html
@@ -13,7 +13,7 @@
   </head>
   <body>
         <script src='main.js'></script>
-    <h1>Crossword puzzle</h1>
+    <h1>Description</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
