--- a/Description.html
+++ b/Description.html
@@ -48,7 +48,7 @@
   </nav>
   <body>
         <script src='main.js'></script>
-    <h1>Description</h1>
+    <h1 class= 'center'>Description</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
