--- a/squares.html
+++ b/squares.html
@@ -26,6 +26,19 @@
         <h2>Crossword Puzzle<br> Find all the words to win</h2>
         <div class="square"></div>
         <script src='main.js'></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.square {
+  height: 50px;
+  width: 50px;
+  background-color: #555;
+}
+</style>
+</head>
+<body>
+
+<h2>Square CSS</h2>
+<div class="square"></div>
     <h1></h1>
 
     <!-- Optional JavaScript -->
