--- a/WordSearch.html
+++ b/WordSearch.html
@@ -60,7 +60,8 @@
 
 
 	</div>
-<font size="4" face="Courier New"><center><table border="0" cellpadding="0" cellspacing="18" width="200"><tbody><tr><td>P</td><td>E</td><td>R</td><td>B</td><td>G</td><td>L</td><td>Z</td><td>T</td><td>F</td><td>T</td><td>S</td><td>U</td><td>U</td><td>C</td><td>H</td></tr>
+<font size="4" face="Courier New"><center><table border="0" cellpadding="0" cellspacing="178" width="221"><tbody>
+  <tr><td>P</td><td>E</td><td>R</td><td>B</td><td>G</td><td>L</td><td>Z</td><td>T</td><td>F</td><td>T</td><td>S</td><td>U</td><td>U</td><td>C</td><td>H</td></tr>
 <tr><td>K</td><td>A</td><td>E</td><td>F</td><td>A</td><td>H</td><td>T</td><td>A</td><td>E</td><td>S</td><td>W</td><td>M</td><td>Q</td><td>E</td><td>I</td></tr>
 <tr><td>V</td><td>A</td><td>D</td><td>Z</td><td>V</td><td>N</td><td>L</td><td>N</td><td>O</td><td>R</td><td>B</td><td>E</td><td>G</td><td>N</td><td>P</td></tr>
 <tr><td>O</td><td>M</td><td>N</td><td>U</td><td>N</td><td>C</td><td>D</td><td>R</td><td>A</td><td>R</td><td>M</td><td>O</td><td>N</td><td>T</td><td>P</td></tr>
@@ -75,7 +76,14 @@
 <tr><td>A</td><td>E</td><td>N</td><td>I</td><td>U</td><td>G</td><td>H</td><td>E</td><td>D</td><td>G</td><td>E</td><td>H</td><td>O</td><td>G</td><td>X</td></tr>
 <tr><td>R</td><td>E</td><td>T</td><td>S</td><td>B</td><td>O</td><td>L</td><td>O</td><td>C</td><td>T</td><td>O</td><td>P</td><td>U</td><td>S</td><td>P</td></tr>
 <tr><td>H</td><td>C</td><td>I</td><td>R</td><td>T</td><td>S</td><td>O</td><td>R</td><td>A</td><td>C</td><td>C</td><td>O</td><td>O</td><td>N</td><td>L</td></tr>
-</tbody></table></center></font><br><div align="center"><center><table border="0" width="100%"><tbody><tr></tr><tr><td>ALBATROSS</td><td>ALLIGATOR</td><td>BANDICOOT</td></tr><tr><td>BARRACUDA</td><td>CENTIPEDE</td><td>CHIMPANZEE</td></tr><tr><td>ELEPHANT</td><td>EMU</td><td>FALCON</td></tr><tr><td>FLOUNDER</td><td>GORILLA</td><td>GUINEA</td></tr><tr><td>HEDGEHOG</td><td>HIPPOPOTAMUS</td><td>JAGUAR</td></tr><tr><td>KANGAROO</td><td>LOBSTER</td><td>MONGOOSE</td></tr><tr><td>NEANDERTHAL</td><td>NEWT</td><td>OCTOPUS</td></tr><tr><td>OSTRICH</td><td>PIG</td><td>PORCUPINE</td></tr><tr><td>RACCOON</td><td>SEA</td><td>TERMITE</td></tr><tr><td>UMBRELLABIRD</td></tr></tbody></table></center></div><br><br><font id="wordsMessage" size="1" face="Arial"><em>28 of 39 words were placed into the puzzle.</em></font><div align="center">
+</tbody></table></center></font><br><div align="center"><center><table border="0" width="100%"><tbody>
+  <tr></tr><tr><td>ALBATROSS</td><td>ALLIGATOR</td><td>BANDICOOT</td></tr><tr><td>BARRACUDA</td><td>CENTIPEDE</td><
+    td>CHIMPANZEE</td></tr><tr><td>ELEPHANT</td><td>EMU</td><td>FALCON</td></tr><tr><td>FLOUNDER</td><td>GORILLA</td>
+      <td>GUINEA</td></tr><tr><td>HEDGEHOG</td><td>HIPPOPOTAMUS</td><td>JAGUAR</td></tr><tr><td>KANGAROO</td><td>LOBSTER</td>
+        <td>MONGOOSE</td></tr><tr><td>NEANDERTHAL</td><td>NEWT</td><td>OCTOPUS</td></tr><tr><td>OSTRICH</td><td>PIG</td>
+          <td>PORCUPINE</td></tr><tr><td>RACCOON</td><td>SEA</td><td>TERMITE</td></tr><tr><td>UMBRELLABIRD</td></tr>
+        </tbody></table></center></div><br><br><font id="wordsMessage" size="1" face="Arial">
+          <em>28 of 39 words were placed into the puzzle.</em></font><div align="center">
 	<div style="font-size:16px; font-weight:bold; margin-bottom:15px; text-decoration:italic;">
 	
 
