--- a/WordSearch.html
+++ b/WordSearch.html
@@ -77,8 +77,8 @@
 <tr><td>R</td><td>E</td><td>T</td><td>S</td><td>B</td><td>O</td><td>L</td><td>O</td><td>C</td><td>T</td><td>O</td><td>P</td><td>U</td><td>S</td><td>P</td></tr>
 <tr><td>H</td><td>C</td><td>I</td><td>R</td><td>T</td><td>S</td><td>O</td><td>R</td><td>A</td><td>C</td><td>C</td><td>O</td><td>O</td><td>N</td><td>L</td></tr>
 </tbody></table></center></font><br><div align="center"><center><table border="0" width="100%"><tbody>
-  <tr></tr><tr><td>ALBATROSS</td><td>ALLIGATOR</td><td>BANDICOOT</td></tr><tr><td>BARRACUDA</td><td>CENTIPEDE</td><
-    td>CHIMPANZEE</td></tr><tr><td>ELEPHANT</td><td>EMU</td><td>FALCON</td></tr><tr><td>FLOUNDER</td><td>GORILLA</td>
+  <tr></tr><tr><td>ALBATROSS</td><td>ALLIGATOR</td><td>BANDICOOT</td></tr><tr><td>BARRACUDA</td><td>CENTIPEDE</td>
+    <td>CHIMPANZEE</td></tr><tr><td>ELEPHANT</td><td>EMU</td><td>FALCON</td></tr><tr><td>FLOUNDER</td><td>GORILLA</td>
       <td>GUINEA</td></tr><tr><td>HEDGEHOG</td><td>HIPPOPOTAMUS</td><td>JAGUAR</td></tr><tr><td>KANGAROO</td><td>LOBSTER</td>
         <td>MONGOOSE</td></tr><tr><td>NEANDERTHAL</td><td>NEWT</td><td>OCTOPUS</td></tr><tr><td>OSTRICH</td><td>PIG</td>
           <td>PORCUPINE</td></tr><tr><td>RACCOON</td><td>SEA</td><td>TERMITE</td></tr><tr><td>UMBRELLABIRD</td></tr>
