--- a/squares.html
+++ b/squares.html
@@ -40,6 +40,21 @@
 <h2></h2>
 <div class="square"></div>
     <h1></h1>
+    <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.square {
+  height: 50px;
+  width: 50px;
+  background-color: #555;
+}
+</style>
+</head>
+<body>
+
+<h2>Square CSS</h2>
+<div class="square"></div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
