--- a/squares.html
+++ b/squares.html
@@ -84,12 +84,28 @@
   width: 50px;
   background-color: #555;
 }
+<h2></h2>
+<div class="square"></div>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.square {
+  height: 50px;
+  width: 50px;
+  background-color: #555;
+}
 </style>
 </head>
 <body>
 
 <h2></h2>
 <div class="square"></div>
+
+</style>
+</head>
+<body>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
