--- a/squares.html
+++ b/squares.html
@@ -12,16 +12,7 @@
     <title>WAZZUP GAMURZ!</title>
   </head>
   <body>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>
-        .square {
-          height: 50px;
-          width: 50px;
-          background-color: #555;
-        }
-        </style>
-        </head>
-        <body>
+            <script src='main.js'></script>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <a class="navbar-brand" href="index.html">Word Game</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,26 +50,9 @@
               </nav>
               
         <h2 class ="center">Crossword Puzzle<br> Find all the words to win</h2>
-        <div class="square"></div>
-        <script src='main.js'></script>
-        
-
-
-</head>
-<body>
-
-<h2></h2>
-<div class="square"></div>
-    <h1></h1>
-    <html>
-<head>
-
-</head>
-<body>
-
-<h2></h2>
-<div class="square"></div>
-
+        <div class="center square"></div>
+        <div class="center square"></div>
+        <div class="center square"></div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
