--- a/squares.html
+++ b/squares.html
@@ -50,9 +50,9 @@
               </nav>
               
         <h2 class ="center">Crossword Puzzle<br> Find all the words to win</h2>
-        <div class="center square"></div>
-        <div class="center square"></div>
-        <div class="center square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
