--- a/CrossWord.html
+++ b/CrossWord.html
@@ -57,3 +57,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+      
+      <li class="breadcrumb-item"><a href="WordSearch.html">Word Seachs</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Crosswords</li>
+    </ol>
+  </nav>
