--- a/WordSearch.html
+++ b/WordSearch.html
@@ -60,7 +60,7 @@
 
 
 	</div>
-<!--
+
   <font size="4" face="Courier New"><center><table border="0" cellpadding="0" cellspacing="178" width="221"><tbody>
   <tr><td>P</td><td>E</td><td>R</td><td>B</td><td>G</td><td>L</td><td>Z</td><td>T</td><td>F</td><td>T</td><td>S</td><td>U</td><td>U</td><td>C</td><td>H</td></tr>
 <tr><td>K</td><td>A</td><td>E</td><td>F</td><td>A</td><td>H</td><td>T</td><td>A</td><td>E</td><td>S</td><td>W</td><td>M</td><td>Q</td><td>E</td><td>I</td></tr>
@@ -85,7 +85,15 @@
           <td>PORCUPINE</td></tr><tr><td>RACCOON</td><td>SEA</td><td>TERMITE</td></tr><tr><td>UMBRELLABIRD</td></tr>
         </tbody></table></center></div><br><br><font id="wordsMessage" size="1" face="Arial">
           <em>28 of 39 words were placed into the puzzle.</em></font><div align="center">
-	<div style="font-size:16px; font-weight:bold; margin-bottom:15px; text-decoration:italic;"> 
-    -->
+  <div style="font-size:16px; font-weight:bold; margin-bottom:15px; text-decoration:italic;"> 
+      <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+            <li class="breadcrumb-item"><a href="CrossWord.html">Crosswords</a></li>
+            
+            <li class="breadcrumb-item active" aria-current="page">Word Search</li>
+          </ol>
+        </nav>
+    
 	
 
