--- a/WordSearch.html
+++ b/WordSearch.html
@@ -59,9 +59,10 @@
 </html>
 
 
-	</div>
-
+  </div>
+  
   <font size="4" face="Courier New"><center><table border="0" cellpadding="0" cellspacing="178" width="221"><tbody>
+    
   <tr><td>P</td><td>E</td><td>R</td><td>B</td><td>G</td><td>L</td><td>Z</td><td>T</td><td>F</td><td>T</td><td>S</td><td>U</td><td>U</td><td>C</td><td>H</td></tr>
 <tr><td>K</td><td>A</td><td>E</td><td>F</td><td>A</td><td>H</td><td>T</td><td>A</td><td>E</td><td>S</td><td>W</td><td>M</td><td>Q</td><td>E</td><td>I</td></tr>
 <tr><td>V</td><td>A</td><td>D</td><td>Z</td><td>V</td><td>N</td><td>L</td><td>N</td><td>O</td><td>R</td><td>B</td><td>E</td><td>G</td><td>N</td><td>P</td></tr>
@@ -100,4 +101,4 @@
 	
 
 	<button>Noice</button>
-  
+  <h1 id="myHeader">My Cities</h1>
