--- a/squares.html
+++ b/squares.html
@@ -52,18 +52,18 @@
         <h2 class ="center">Crossword Puzzle<br> Find all the words to win</h2>
         <div class = 'grid'></div>
 
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+        <div class="(h)tml square"></div>
+        <div class="h(t)ml square"></div>
+        <div class="ht(m)l square"></div>
+        <div class="htm(l) square"></div>
+        <div class="m(a)in.jss square"></div>
+        <div class="ma(i)n.jss square"></div>
+        <div class="mai(n).jss square"></div>
+        <div class="main(.)jss square"></div>
+        <div class="main.(j)ss square"></div>
+        <div class="main.j(s)s square"></div>
+        <div class="main.js(s) square"></div>
+        <div class="nsquare"></div>
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
