--- a/squares.html
+++ b/squares.html
@@ -63,10 +63,10 @@
         <div class="main.(j)ss square"></div>
         <div class="main.j(s)s square"></div>
         <div class="main.js(s) square"></div>
-        <div class="nsquare"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+        <div class="n(a)v square"></div>
+        <div class="na(v) square"></div>
+        <div class="(c)oding square"></div>
+        <div class="co)square"></div>
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
