--- a/WordSearch.html
+++ b/WordSearch.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     
-    <title>Hello, world!</title>
+    <title>WordSearch</title>
   </head>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">Word Game</a>
@@ -48,7 +48,7 @@
   </nav>
   <body>
         <script src='main.js'></script>
-    <h1>Word Search</h1>
+        <h1 align="center">WordSearch</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
