--- a/squares.html
+++ b/squares.html
@@ -66,8 +66,8 @@
         <div class="n(a)v square"></div>
         <div class="na(v) square"></div>
         <div class="(c)oding square"></div>
-        <div class="co)square"></div>
-        <div class="square"></div>
+        <div class="c(o)ding square"></div>
+        <div class="cosquare"></div>
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
