--- a/squares.html
+++ b/squares.html
@@ -65,37 +65,41 @@
         <div class="main.js(s) square"></div>
         <div class="n(a)v square"></div>
         <div class="na(v) square"></div>
-        <div class="(c)oding square"></div>
+        <div class="(c)ss square"></div>
+        <div class="cs(s) square"></div>
+        <div class="s(t)yle square"></div>
+        <div class="st(y)le square"></div>
+        <div class="sty(l)e square"></div>
+        <div class="styl(e) square"></div>
+        <div class="j(a)vascript square"></div>
+        <div class="ja(v)ascript square"></div>
+        <div class="jav(a)script square"></div>
+        <div class="java(s)cript square"></div>
+        <div class="javas(c)ript square"></div>
+        <div class="javasc(r)ipt square"></div>
+        <div class="javascr(i)pt square"></div>
+        <div class="javascri(p)t square"></div>
+        <div class="javascrip(t) square"></div>
+        <div class="i(n)dex square"></div>
+        <div class="in(d)ex square"></div>
+        <div class="ind(e)x square"></div>
+        <div class="inde(x) square"></div>
+        <div class="p(r)ogramming square"></div>
+        <div class="pr(o)gramming square"></div>
+        <div class="pro(g)ramming square"></div>
+        <div class="prog(r)amming square"></div>
+        <div class="progr(a)mming square"></div>
+        <div class="progra(m)ming square"></div>
+        <div class="program(m)ing square"></div>
+        <div class="programm(i)ng square"></div>
+        <div class="programmi(n)g square"></div>
+        <div class="programmin(g) square"></div>
         <div class="c(o)ding square"></div>
-        <div class="cosquare"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+        <div class="co(d)ing square"></div>
+        <div class="cod(i)ng square"></div>
+        <div class="codi(n)g square"></div>
+        <div class="codin(g) square"></div>
+        
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
