--- a/squares.html
+++ b/squares.html
@@ -51,54 +51,53 @@
               
         <h2 class ="center">Crossword Puzzle<br> Find all the words to win</h2>
         <div class = 'grid'></div>
-
-        <div class="(h)tml square"></div>
-        <div class="h(t)ml square"></div>
-        <div class="ht(m)l square"></div>
-        <div class="htm(l) square"></div>
-        <div class="m(a)in.jss square"></div>
-        <div class="ma(i)n.jss square"></div>
-        <div class="mai(n).jss square"></div>
-        <div class="main(.)jss square"></div>
-        <div class="main.(j)ss square"></div>
-        <div class="main.j(s)s square"></div>
-        <div class="main.js(s) square"></div>
-        <div class="n(a)v square"></div>
-        <div class="na(v) square"></div>
-        <div class="(c)ss square"></div>
-        <div class="cs(s) square"></div>
-        <div class="s(t)yle square"></div>
-        <div class="st(y)le square"></div>
-        <div class="sty(l)e square"></div>
-        <div class="styl(e) square"></div>
-        <div class="j(a)vascript square"></div>
-        <div class="ja(v)ascript square"></div>
-        <div class="jav(a)script square"></div>
-        <div class="java(s)cript square"></div>
-        <div class="javas(c)ript square"></div>
-        <div class="javasc(r)ipt square"></div>
-        <div class="javascr(i)pt square"></div>
-        <div class="javascri(p)t square"></div>
-        <div class="javascrip(t) square"></div>
-        <div class="i(n)dex square"></div>
-        <div class="in(d)ex square"></div>
-        <div class="ind(e)x square"></div>
-        <div class="inde(x) square"></div>
-        <div class="p(r)ogramming square"></div>
-        <div class="pr(o)gramming square"></div>
-        <div class="pro(g)ramming square"></div>
-        <div class="prog(r)amming square"></div>
-        <div class="progr(a)mming square"></div>
-        <div class="progra(m)ming square"></div>
-        <div class="program(m)ing square"></div>
-        <div class="programm(i)ng square"></div>
-        <div class="programmi(n)g square"></div>
-        <div class="programmin(g) square"></div>
-        <div class="c(o)ding square"></div>
-        <div class="co(d)ing square"></div>
-        <div class="cod(i)ng square"></div>
-        <div class="codi(n)g square"></div>
-        <div class="codin(g) square"></div>
+        <div class="_h_tml square"></div>
+        <div class="h_t_ml square"></div>
+        <div class="ht_m_l square"></div>
+        <div class="htm_l_ square"></div>
+        <div class="m_a_in.jss square"></div>
+        <div class="ma_i_n.jss square"></div>
+        <div class="mai_n_.jss square"></div>
+        <div class="main_._jss square"></div>
+        <div class="main._j_ss square"></div>
+        <div class="main.j_s_s square"></div>
+        <div class="main.js_s_ square"></div>
+        <div class="n_a_v square"></div>
+        <div class="na_v_ square"></div>
+        <div class="_c_ss square"></div>
+        <div class="cs_s_ square"></div>
+        <div class="s_t_yle square"></div>
+        <div class="st_y_le square"></div>
+        <div class="sty_l_e square"></div>
+        <div class="styl_e_ square"></div>
+        <div class="j_a_vascript square"></div>
+        <div class="ja_v_ascript square"></div>
+        <div class="jav_a_script square"></div>
+        <div class="java_s_cript square"></div>
+        <div class="javas_c_ript square"></div>
+        <div class="javasc_r_ipt square"></div>
+        <div class="javascr_i_pt square"></div>
+        <div class="javascri_p_t square"></div>
+        <div class="javascrip_t_ square"></div>
+        <div class="i_n_dex square"></div>
+        <div class="in_d_ex square"></div>
+        <div class="ind_e_x square"></div>
+        <div class="inde_x_ square"></div>
+        <div class="p_r_ogramming square"></div>
+        <div class="pr_o_gramming square"></div>
+        <div class="pro_g_ramming square"></div>
+        <div class="prog_r_amming square"></div>
+        <div class="progr_a_mming square"></div>
+        <div class="progra_m_ming square"></div>
+        <div class="program_m_ing square"></div>
+        <div class="programm_i_ng square"></div>
+        <div class="programmi_n_g square"></div>
+        <div class="programmin_g_ square"></div>
+        <div class="c_o_ding square"></div>
+        <div class="co_d_ing square"></div>
+        <div class="cod_i_ng square"></div>
+        <div class="codi_n_g square"></div>
+        <div class="codin_g_ square"></div>
         
 
     <!-- Optional JavaScript -->
