--- a/WordSearch.html
+++ b/WordSearch.html
@@ -101,6 +101,11 @@
           </ol>
         </nav>
     
-	
-
+<style>	
+body {
+background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ2WyldnBNMfS_XlAvUPnIKm4LEh0bYwNVdBGRiEnJ2hsqdXdnL");
+}
+</style>
+  
+</body>
 	<button>Noice</button>
