--- a/squares.html
+++ b/squares.html
@@ -14,7 +14,7 @@
   <body>
             <script src='main.js'></script>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="index.html">Word Game</a>
+                <a class="navbar-brand" href="index.html">Home</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -22,18 +22,18 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="#">WordSearch <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="Trivia1.html">Trivia <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Puzzles</a>
+                      <a class="nav-link" href="#">[Blank]</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Games
+                        Puzzles
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="CrossWord.html">Crossword</a>
-                        <a class="dropdown-item" href="WordSearch.html">Word Search</a>
+                        <a class="dropdown-item" href="WordSearch.html">WordSearch</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="Description.html">Descripton</a>
                       </div>
