--- a/Trivia1.html
+++ b/Trivia1.html
@@ -48,7 +48,7 @@
   </head>
   <body>
     <script src='main.js'></script>
-    <h1 id ='trivia'>Trivia</h1>
+    <h1 id ='trivia'align="center">Trivia</h1>
 <p></p>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -57,3 +57,16 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
+<head>
+        
+<div>
+    <div style="text-align: center;">
+<h1>Answer the questions correctly</h1>
+
+  <a href=""><button>Click to continue</button></a>
+    </div>
+            </body>
+            </html> 
+
+
+    
