--- a/squares.html
+++ b/squares.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
-    <title>WAZZUP GAMURZ!</title>
+    <title>None</title>
   </head>
   <body>
             <script src='main.js'></script>
@@ -51,7 +51,7 @@
               
         <h2 class ="center">Crossword Puzzle<br> Find all the words to win</h2>
 
-        <div class = 'grid'></div>
+        <div class ='grid'></div>
         
         <div class="_h_tml square"></div>
         <div class="h_t_ml square"></div>
