--- a/Test.html
+++ b/Test.html
@@ -57,13 +57,13 @@
         <div class="h_t_ml square">t</div>
         <div class="ht_m_l square">m</div>
         <div class="htm_l_ square">l</div>
-        <div class="m_a_in.jss square">a</div>
-        <div class="ma_i_n.jss square">i</div>
-        <div class="mai_n_.jss square">n</div>
-        <div class="main_._jss square">.</div>
-        <div class="main._j_ss square">j</div>
-        <div class="main.j_s_s square">s</div>
-        <div class="main.js_s_ square">s</div>
+        <div class="m_a_in-jss square">a</div>
+        <div class="ma_i_n-jss square">i</div>
+        <div class="mai_n_-jss square">n</div>
+        <div class="main_-_jss square">.</div>
+        <div class="main-_j_ss square">j</div>
+        <div class="main-j_s_s square">s</div>
+        <div class="main-js_s_ square">s</div>
         <div class="n_a_v square">a</div>
         <div class="na_v_ square">v</div>
         <div class="_c_ss square">c</div>
@@ -99,7 +99,7 @@
         <div class="co_d_ing square">d</div>
         <div class="cod_i_ng square">i</div>
         <div class="codi_n_g square">n</div>
-        <div class="codin_g_ square">n</div>
+        <div class="codin_g_ square">g</div>
         </div>
 
     <!-- Optional JavaScript -->
