--- a/squares.html
+++ b/squares.html
@@ -57,13 +57,13 @@
         <div class="h_t_ml square"></div>
         <div class="ht_m_l square"></div>
         <div class="htm_l_ square"></div>
-        <div class="m_a_in.jss square"></div>
-        <div class="ma_i_n.jss square"></div>
-        <div class="mai_n_.jss square"></div>
-        <div class="main_._jss square"></div>
-        <div class="main._j_ss square"></div>
-        <div class="main.j_s_s square"></div>
-        <div class="main.js_s_ square"></div>
+        <div class="m_a_in-jss square"></div>
+        <div class="ma_i_n-jss square"></div>
+        <div class="mai_n_-jss square"></div>
+        <div class="main_-_jss square"></div>
+        <div class="main-_j_ss square"></div>
+        <div class="main-j_s_s square"></div>
+        <div class="main-js_s_ square"></div>
         <div class="n_a_v square"></div>
         <div class="na_v_ square"></div>
         <div class="_c_ss square"></div>
