--- a/CrossWord.html
+++ b/CrossWord.html
@@ -69,6 +69,6 @@
 
   <style>	
       body {
-      background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTV2nG6KVWEJ6uc6Rz-76OyC65NiDXKjN7aHTJisLKwFwH8Y-ubRA");
+      background-image: url("https://images.fineartamerica.com/images/artworkimages/mediumlarge/2/space-galaxy-background-sololos.jpg");
       }
       </style>
