--- a/CrossWord.html
+++ b/CrossWord.html
@@ -48,7 +48,7 @@
     </nav>
   <body>
         <script src='main.js'></script>
-    <h1>Crossword puzzle</h1>
+    <h1 class= "text">Crossword puzzle</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
