--- a/Trivia2.html
+++ b/Trivia2.html
@@ -48,7 +48,7 @@
   </head>
   <body>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">What is the smallest U.S. State?</h1>
+    <h1 id ='trivia'align="center">How long did Regular show last?</h1>
 <p></p>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -58,10 +58,10 @@
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
-<a href=""><button>Hawaii</button></a>
-<a href=""><button>Connecticut</button></a>
-<a href="Trivia3.html"><button>Rhode Island</button></a>
-<a href=""><button>Delaware</button></a>
+<a href=""><button>4 years</button></a>
+<a href=""><button>6 years</button></a>
+<a href="Trivia3.html"><button>8 years</button></a>
+<a href=""><button>9 years</button></a>
   </body>
 </html>
 <head>
