Trying to change letters to Upper Case

--- a/Test.html
+++ b/Test.html
@@ -51,7 +51,7 @@
               
         <h2 class ="center">Crossword Puzzle<br> Find all the words to win</h2>
 
-        <div class ='grid'>
+        <div class ='gridTest'>
         
         <div class="_h_tml square">h</div>
         <div class="h_t_ml square">t</div>
