--- a/Trivia4.html
+++ b/Trivia4.html
@@ -48,7 +48,7 @@
   </head>
   <body>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">?</h1>
+    <h1 id ='trivia'align="center">What is the correct name of the yeti who fixes Mordecai and Rigby's problems?</h1>
 <p></p>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
