--- a/Trivia3.html
+++ b/Trivia3.html
@@ -48,8 +48,11 @@
   </head>
   <body>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">?</h1>
-<p></p>
+    <h1 id ='trivia'align="center">Where did Mordecai and Rigby work?</h1>
+    <div class="x">
+        <img src="" 
+        alt="">
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
@@ -58,10 +61,12 @@
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
-<a href=""><button>?</button></a>
-<a href="Trivia4.html"><button>?</button></a>
-<a href=""><button>?</button></a>
-<a href=""><button>?</button></a>
+    <div class="v">
+<a href=""><button>Skippy</button></a>
+<a href="Trivia4.html"><button>Skips</button></a>
+<a href=""><button>Skipper</button></a>
+<a href=""><button>The burger joint</button></a>
+</div>
   </body>
 </html>
 <head>
