--- a/Trivia8.html
+++ b/Trivia8.html
@@ -48,7 +48,7 @@
   </head>
   <body>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">How old is Mordecai and Rigby?</h1>
+    <h1 id ='trivia'align="center">?</h1>
 <p></p>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -58,10 +58,10 @@
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
-<a href=""><button>30</button></a>
-<a href=""><button>17</button></a>
-<a href="Trivia6.html"><button>23</button></a>
-<a href=""><button>Ageless</button></a>
+<a href="TriviaEnd.html"><button>?</button></a>
+<a href=""><button>?</button></a>
+<a href=""><button>?</button></a>
+<a href=""><button>?</button></a>
   </body>
 </html>
 <head>
