--- a/squares.html
+++ b/squares.html
@@ -53,7 +53,7 @@
 
         <div class ='grid'>
         
-        <div class="_h_tml square"></div>
+        <div class="_h_tml square">1</div>
         <div class="h_t_ml square"></div>
         <div class="ht_m_l square"></div>
         <div class="htm_l_ square"></div>
