--- a/Trivia6.html
+++ b/Trivia6.html
@@ -49,7 +49,11 @@
   <body>
     <script src='main.js'></script>
     <h1 id ='trivia'align="center">What are Mordecai and Rigby's catchphrases?</h1>
-<p></p>
+    <!-- add image/gif -->
+    <div class="v">
+    <img src="http://thanksforyourplaying.files.wordpress.com/2013/08/oooh_zps67524ece.gif" 
+    alt="">
+</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
@@ -58,10 +62,12 @@
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
-<a href="TriviaEnd.html"><button>"Ooooh!" and "Hm Hm"</button></a>
-<a href=""><button>"Yeahya!" and "wooo!"</button></a>
+    <div class="v">
+<a href="Trivia7.html"><button>"Ooooh!" and "Hm-Hm"</button></a>
+<a href=""><button>"Yeah-yuh!" and "wooo!"</button></a>
 <a href=""><button>"In your face"</button></a>
 <a href=""><button>"Jolly good show"</button></a>
+</div>
   </body>
 </html>
 <head>
