--- a/Trivia1.html
+++ b/Trivia1.html
@@ -49,7 +49,12 @@
   <body>
     <script src='main.js'></script>
     <h1 id ='trivia'align="center">Trivia</h1>
-<p></p>
+    
+<!-- add image/gif -->
+<div class="v">
+    <img src="https://i.cartoonnetwork.com/prismo/props/reg_tv-pg-v.png" 
+    alt="">
+</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
