--- a/Trivia7.html
+++ b/Trivia7.html
@@ -49,7 +49,11 @@
   <body>
     <script src='main.js'></script>
     <h1 id ='trivia'align="center">Who is Muscle Man's best friend?</h1>
-<p></p>
+    <!-- add image/gif -->
+    <div class="v">
+    <img src="" 
+    alt="">
+</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
@@ -58,10 +62,12 @@
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
+    <div class="v">
 <a href=""><button>Low Five Ghost</button></a>
 <a href=""><button>Prank Ghost</button></a>
-<a href="TriviaEnd.html"><button>High Five Ghost</button></a>
+<a href="Trivia8.html"><button>High Five Ghost</button></a>
 <a href=""><button>The Ghost of the Park</button></a>
+</div>
   </body>
 </html>
 <head>
