--- a/Trivia7.html
+++ b/Trivia7.html
@@ -51,7 +51,7 @@
     <h1 id ='trivia'align="center">Who is Muscle Man's best friend?</h1>
     <!-- add image/gif -->
     <div class="v">
-    <img src="" 
+    <img src="https://media4.giphy.com/media/13dyfTzVJ0ZcaI/giphy.gif" 
     alt="">
 </div>
     <!-- Optional JavaScript -->
