--- a/Trivia8.html
+++ b/Trivia8.html
@@ -48,10 +48,10 @@
   </head>
   <body>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">?</h1>
+    <h1 id ='trivia'align="center">Who does Muscle always jokes about?</h1>
     <!-- add image/gif -->
     <div class="v">
-    <img src="" 
+    <img src="https://thumbs.gfycat.com/NiceConstantHatchetfish-max-1mb.gif" 
     alt="">
 </div>
     <!-- Optional JavaScript -->
@@ -63,10 +63,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="TriviaEnd.html"><button>?</button></a>
-<a href=""><button>?</button></a>
-<a href=""><button>?</button></a>
-<a href=""><button>?</button></a>
+<a href=""><button>"My uncle"</button></a>
+<a href=""><button>"My cousin"</button></a>
+<a href="Trivia9"><button>"My mom"</button></a>
+<a href=""><button>"My dad"</button></a>
 </div>
   </body>
 </html>
