added svg links

--- a/CrossWord.html
+++ b/CrossWord.html
@@ -47,6 +47,9 @@
       </div>
     </nav>
   <body>
+
+
+        <script src= "svg.js"></script>
         <script src='main.js'></script>
     <h1 class= "text">Crossword puzzle</h1>
 
