--- a/Trivia2.html
+++ b/Trivia2.html
@@ -47,6 +47,7 @@
     <title>[Website name]</title>
   </head>
   <body>
+      <script src= "svg.js"></script>
     <script src='main.js'></script>
     <h1 id ='trivia'align="center">How long did Regular show last?</h1>
 <p></p>
