--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     <title>[Website name]</title>
   </head>
   <body>
-    <script src='main.js'></script>
+
+<script src= "svg.js"></script>
+<script src='main.js'></script>
     <h1 id ='something'>Project</h1>
 <p>hi</p>
     <!-- Optional JavaScript -->
