--- a/Description.html
+++ b/Description.html
@@ -47,7 +47,9 @@
       </div>
     </nav>
   <body>
-        <script src='main.js'></script>
+     
+     <script src= "svg.js"></script>
+     <script src='main.js'></script>
     <h1 class= 'center'>Description</h1>
 
     <!-- Optional JavaScript -->
