--- a/Trivia3.html
+++ b/Trivia3.html
@@ -47,6 +47,7 @@
     <title>[Website name]</title>
   </head>
   <body>
+      <script src= "svg.js"></script>
     <script src='main.js'></script>
     <h1 id ='trivia'align="center">Where did Mordecai and Rigby work?</h1>
     <div class="x">
