--- a/Trivia4.html
+++ b/Trivia4.html
@@ -47,6 +47,7 @@
     <title>[Website name]</title>
   </head>
   <body>
+      <script src= "svg.js"></script>
     <script src='main.js'></script>
     <h1 id ='trivia'align="center">What is the correct name of the yeti who fixes Mordecai and Rigby's problems?</h1>
     <!-- add image/gif -->
