--- a/Trivia5.html
+++ b/Trivia5.html
@@ -47,6 +47,7 @@
     <title>[Website name]</title>
   </head>
   <body>
+      <script src= "svg.js"></script>
     <script src='main.js'></script>
     <h1 id ='trivia'align="center">How old is Mordecai and Rigby?</h1>
     <!-- add image/gif -->
