--- a/Trivia8.html
+++ b/Trivia8.html
@@ -47,6 +47,7 @@
     <title>[Website name]</title>
   </head>
   <body>
+      <script src= "svg.js"></script>
     <script src='main.js'></script>
     <h1 id ='trivia'align="center">Who does Muscle always jokes about?</h1>
     <!-- add image/gif -->
