--- a/WordSearch.html
+++ b/WordSearch.html
@@ -48,6 +48,7 @@
     </nav>
     
   <body>
+      <script src= "svg.js"></script>
         <script src='main.js'></script>
         <h1 align="center">WordSearch</h1>
 
