--- a/squares.html
+++ b/squares.html
@@ -12,7 +12,8 @@
     <title>None</title>
   </head>
   <body>
-            <script src='main.js'></script>
+      <script src= "svg.js"></script>
+      <script src='main.js'></script>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <a class="navbar-brand" href="index.html">Home</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
