--- a/Solutions.html
+++ b/Solutions.html
@@ -53,53 +53,53 @@
 
         <div class ='gridTest'>
         
-        <div class="_h_tmls square">H</div>
-        <div class="h_t_ml square">T</div>
-        <div class="ht_m_l square">M</div>
-        <div class="htm_l_ square">L</div>
-        <div class="m_a_in-jss square">A</div>
-        <div class="ma_i_n-jss square">I</div>
-        <div class="mai_n_-jss square">N</div>
-        <div class="main_-_jss square">.</div>
-        <div class="main-_j_ss square">J</div>
-        <div class="main-j_s_s square">S</div>
-        <div class="main-js_s_ square">S</div>
-        <div class="n_a_v square">A</div>
-        <div class="na_v_ square">V</div>
-        <div class="_c_ss square">C</div>
-        <div class="cs_s_ square">S</div>
-        <div class="s_t_yle square">T</div>
-        <div class="st_y_le square">Y</div>
-        <div class="sty_l_e square">L</div>
-        <div class="styl_e_ square">E</div>
-        <div class="j_a_vascript square">A</div>
-        <div class="ja_v_ascript square">V</div>
-        <div class="jav_a_script square">A</div>
-        <div class="java_s_cript square">S</div>
-        <div class="javas_c_ript square">C</div>
-        <div class="javasc_r_ipt square">R</div>
-        <div class="javascr_i_pt square">I</div>
-        <div class="javascri_p_t square">P</div>
-        <div class="javascrip_t_ square">T</div>
-        <div class="i_n_dex square">N</div>
-        <div class="in_d_ex square">D</div>
-        <div class="ind_e_x square">E</div>
-        <div class="inde_x_ square">X</div>
-        <div class="p_r_ogramming square">R</div>
-        <div class="pr_o_gramming square">O</div>
-        <div class="pro_g_ramming square">G</div>
-        <div class="prog_r_amming square">R</div>
-        <div class="progr_a_mming square">A</div>
-        <div class="progra_m_ming square">M</div>
-        <div class="program_m_ing square">M</div>
-        <div class="programm_i_ng square">I</div>
-        <div class="programmi_n_g square">N</div>
-        <div class="programmin_g_ square">G</div>
-        <div class="c_o_ding square">O</div>
-        <div class="co_d_ing square">D</div>
-        <div class="cod_i_ng square">I</div>
-        <div class="codi_n_g square">N</div>
-        <div class="codin_g_ square">G</div>
+        <div class="_h_tmls squares">H</div>
+        <div class="h_t_ml squares">T</div>
+        <div class="ht_m_l squares">M</div>
+        <div class="htm_l_ squares">L</div>
+        <div class="m_a_in-jss squares">A</div>
+        <div class="ma_i_n-jss squares">I</div>
+        <div class="mai_n_-jss squares">N</div>
+        <div class="main_-_jss squares">.</div>
+        <div class="main-_j_ss squares">J</div>
+        <div class="main-j_s_s squares">S</div>
+        <div class="main-js_s_ squares">S</div>
+        <div class="n_a_v squares">A</div>
+        <div class="na_v_ squares">V</div>
+        <div class="_c_ss squares">C</div>
+        <div class="cs_s_ squares">S</div>
+        <div class="s_t_yle squares">T</div>
+        <div class="st_y_le squares">Y</div>
+        <div class="sty_l_e squares">L</div>
+        <div class="styl_e_ squares">E</div>
+        <div class="j_a_vascript squares">A</div>
+        <div class="ja_v_ascript squares">V</div>
+        <div class="jav_a_script squares">A</div>
+        <div class="java_s_cript squares">S</div>
+        <div class="javas_c_ript squares">C</div>
+        <div class="javasc_r_ipt squares">R</div>
+        <div class="javascr_i_pt squares">I</div>
+        <div class="javascri_p_t squares">P</div>
+        <div class="javascrip_t_ squares">T</div>
+        <div class="i_n_dex squares">N</div>
+        <div class="in_d_ex squares">D</div>
+        <div class="ind_e_x squares">E</div>
+        <div class="inde_x_ squares">X</div>
+        <div class="p_r_ogramming squares">R</div>
+        <div class="pr_o_gramming squares">O</div>
+        <div class="pro_g_ramming squares">G</div>
+        <div class="prog_r_amming squares">R</div>
+        <div class="progr_a_mming squares">A</div>
+        <div class="progra_m_ming squares">M</div>
+        <div class="program_m_ing squares">M</div>
+        <div class="programm_i_ng squares">I</div>
+        <div class="programmi_n_g squares">N</div>
+        <div class="programmin_g_ squares">G</div>
+        <div class="c_o_ding squares">O</div>
+        <div class="co_d_ing squares">D</div>
+        <div class="cod_i_ng squares">I</div>
+        <div class="codi_n_g squares">N</div>
+        <div class="codin_g_ squares">G</div>
         </div>
 
     <!-- Optional JavaScript -->
