--- a/Trivia10.html
+++ b/Trivia10.html
@@ -50,8 +50,8 @@
     <script src='main.js'></script>
     <h1 id ='trivia'align="center">What is Pops?</h1>
     <!-- add image/gif -->
-    <div class="">
-    <img src="" 
+    <div class="x">
+    <img src="https://giffiles.alphacoders.com/295/29524.gif" 
     alt="">
 </div>
     <!-- Optional JavaScript -->
