--- a/Trivia11.html
+++ b/Trivia11.html
@@ -48,10 +48,10 @@
   </head>
   <body>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">?</h1>
+    <h1 id ='trivia'align="center">Who is Benson's boss?</h1>
     <!-- add image/gif -->
     <div class="v">
-    <img src="" 
+    <img src="https://media2.giphy.com/media/zsmkSw01Gpg4g/giphy.gif" 
     alt="">
 </div>
     <!-- Optional JavaScript -->
@@ -63,10 +63,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="TriviaEnd.html"><button>?</button></a>
-<a href=""><button>?</button></a>
-<a href=""><button>?</button></a>
-<a href=""><button>?</button></a>
+<a href="TriviaEnd.html"><button>Mr. Maelard</button></a>
+<a href=""><button>Skips</button></a>
+<a href=""><button>Pops</button></a>
+<a href=""><button>Mordecai & Rigby</button></a>
 </div>
   </body>
 </html>
