--- a/Trivia2.html
+++ b/Trivia2.html
@@ -53,8 +53,10 @@
 <div class="x">
   <img src="https://media1.tenor.com/images/5f10a18f257ce2379ee188e9eb3c9ddd/tenor.gif?itemid=5407353" alt="">
 </div>
+<div class="v">
 <h3>Hint:</h3>
 <h5>First episode aired in August 14, 2009</h5>
+</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
