--- a/Trivia8.html
+++ b/Trivia8.html
@@ -48,10 +48,10 @@
   </head>
   <body>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">Who does Muscle always jokes about?</h1>
+    <h1 id ='trivia'align="center">Who does Muscle man always jokes about?</h1>
     <!-- add image/gif -->
     <div class="v">
-    <img src="https://thumbs.gfycat.com/NiceConstantHatchetfish-max-1mb.gif" 
+    <img src="https://img.fireden.net/co/image/1448/13/1448134948980.gif" 
     alt="">
 </div>
     <!-- Optional JavaScript -->
@@ -65,7 +65,7 @@
     <div class="v">
 <a href=""><button>"My uncle"</button></a>
 <a href=""><button>"My cousin"</button></a>
-<a href="Trivia9"><button>"My mom"</button></a>
+<a href="Trivia9.html"><button>"My mom"</button></a>
 <a href=""><button>"My dad"</button></a>
 </div>
   </body>
