--- a/Trivia11.html
+++ b/Trivia11.html
@@ -65,9 +65,9 @@
     </script>
     <div class="v">
 <a href="TriviaEnd.html"><button>Mr. Maelard</button></a>
-<a href=""><button>Skips</button></a>
-<a href=""><button>Pops</button></a>
-<a href=""><button>Mordecai & Rigby</button></a>
+<a href="Triviawrong10.html"><button>Skips</button></a>
+<a href="Triviawrong10.html"><button>Pops</button></a>
+<a href="Triviawrong10.html"><button>Mordecai & Rigby</button></a>
 </div>
   </body>
 </html>
