--- a/Trivia3.html
+++ b/Trivia3.html
@@ -64,10 +64,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href=""><button>They're jobless</button></a>
+<a href="Triviawrong2.html"><button>They're jobless</button></a>
 <a href="Trivia4.html"><button>The local park</button></a>
-<a href=""><button>The coffee shop</button></a>
-<a href=""><button>The burger joint</button></a>
+<a href="Triviawrong2.html"><button>The coffee shop</button></a>
+<a href="Triviawrong2.html"><button>The burger joint</button></a>
 </div>
   </body>
 </html>
