--- a/Trivia4.html
+++ b/Trivia4.html
@@ -64,9 +64,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="x">
-<a href=""><button>Skippy</button></a>
-<a href=""><button>Yeti boi</button></a>
-<a href=""><button>Skipper</button></a>
+<a href="Triviawrong3.html"><button>Skippy</button></a>
+<a href="Triviawrong3.html"><button>Yeti boi</button></a>
+<a href="Triviawrong3.html"><button>Skipper</button></a>
 <a href="Trivia5.html"><button>Skips</button></a>
   </div>
   </body>
