--- a/Trivia5.html
+++ b/Trivia5.html
@@ -64,10 +64,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="x">
-<a href=""><button>30</button></a>
-<a href=""><button>17</button></a>
+<a href="Triviawrong4.html"><button>30</button></a>
+<a href="Triviawrong4.html"><button>17</button></a>
 <a href="Trivia6.html"><button>23</button></a>
-<a href=""><button>Ageless</button></a>
+<a href="Triviawrong4.html"><button>Ageless</button></a>
 </div>
   </body>
 </html>
