--- a/Triviawrong9.html
+++ b/Triviawrong9.html
@@ -49,12 +49,12 @@
   <body>
       <script src= "svg.js"></script>
     <script src='main.js'></script>
-    <h1 id ='trivia'align="center">Who does Muscle man always jokes about?</h1>
-    <!-- add image/gif -->
-    <div class="v">
-    <img src="https://img.fireden.net/co/image/1448/13/1448134948980.gif" 
-    alt="">
+    <h1 id ='trivia'align="center">WRONG ANSWER</h1>
+<!-- image -->
+<div class="x">
+  <img src="http://images6.fanpop.com/image/photos/33500000/GIFS-regular-show-33536922-500-279.gif" alt="">
 </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
@@ -64,10 +64,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="Triviawrong7.html"><button>"My uncle"</button></a>
-<a href="Triviawrong7.html"><button>"My cousin"</button></a>
-<a href="Trivia9.html"><button>"My mom"</button></a>
-<a href="Triviawrong7.html"><button>"My dad"</button></a>
+<a href="Trivia10.html"><button>Go Back</button></a>
 </div>
   </body>
 </html>
