--- a/Trivia6.html
+++ b/Trivia6.html
@@ -65,9 +65,9 @@
     </script>
     <div class="v">
 <a href="Trivia7.html"><button>"Ooooh!" and "Hm-Hm"</button></a>
-<a href=""><button>"Yeah-yuh!" and "wooo!"</button></a>
-<a href=""><button>"In your face"</button></a>
-<a href=""><button>"Jolly good show"</button></a>
+<a href="Triviawrong5.html"><button>"Yeah-yuh!" and "wooo!"</button></a>
+<a href="Triviawrong5.html"><button>"In your face"</button></a>
+<a href="Triviawrong5.html"><button>"Jolly good show"</button></a>
 </div>
   </body>
 </html>
