--- a/Trivia7.html
+++ b/Trivia7.html
@@ -64,10 +64,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href=""><button>Low Five Ghost</button></a>
-<a href=""><button>Prank Ghost</button></a>
+<a href="Triviawrong6.html"><button>Low Five Ghost</button></a>
+<a href="Triviawrong6.html"><button>Prank Ghost</button></a>
 <a href="Trivia8.html"><button>High Five Ghost</button></a>
-<a href=""><button>The Ghost of the Park</button></a>
+<a href="Triviawrong6.html"><button>The Ghost of the Park</button></a>
 </div>
   </body>
 </html>
