--- a/Trivia9.html
+++ b/Trivia9.html
@@ -64,10 +64,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href=""><button>Don is his older brother</button></a>
+<a href="Triviawrong8.html"><button>Don is his older brother</button></a>
 <a href="Trivia10.html"><button>Don is his younger borther</button></a>
-<a href=""><button>Don is his cousin</button></a>
-<a href=""><button>Don is his dad</button></a>
+<a href="Triviawrong8.html"><button>Don is his cousin</button></a>
+<a href="Triviawrong8.html"><button>Don is his dad</button></a>
 </div>
   </body>
 </html>
