--- a/Trivia11.html
+++ b/Trivia11.html
@@ -64,7 +64,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <div class="v">
-<a href="TriviaEnd.html"><button>Mr. Maelard</button></a>
+<a href="TriviaEnd.html"><button>Mr. Maellard</button></a>
 <a href="Triviawrong10.html"><button>Skips</button></a>
 <a href="Triviawrong10.html"><button>Pops</button></a>
 <a href="Triviawrong10.html"><button>Mordecai & Rigby</button></a>
