--- a/Triviawrong10.html
+++ b/Triviawrong10.html
@@ -52,7 +52,7 @@
     <h1 id ='trivia'align="center">WRONG ANSWER</h1>
 <!-- image -->
 <div class="x">
-  <img src="https://i.imgur.com/DydUh6J.gif" alt="">
+  <img src="http://fanaru.com/regular-show/image/184381-regular-show-regular-show.gif" alt="">
 </div>
 
     <!-- Optional JavaScript -->
