--- a/Triviawrong9.html
+++ b/Triviawrong9.html
@@ -52,7 +52,7 @@
     <h1 id ='trivia'align="center">WRONG ANSWER</h1>
 <!-- image -->
 <div class="x">
-  <img src="http://images6.fanpop.com/image/photos/33500000/GIFS-regular-show-33536922-500-279.gif" alt="">
+  <img src="https://i.pinimg.com/originals/66/7c/e0/667ce0aa2c6f2f2ecd47fd6ec85ff381.gif" alt="">
 </div>
 
     <!-- Optional JavaScript -->
