--- a/Trivia8.html
+++ b/Trivia8.html
@@ -52,7 +52,7 @@
     <h1 id ='trivia'align="center">Who does Muscle man always jokes about?</h1>
     <!-- add image/gif -->
     <div class="v">
-    <img src="https://img.fireden.net/co/image/1448/13/1448134948980.gif" 
+    <img src="https://thumbs.gfycat.com/ImpoliteThisBear-size_restricted.gif" 
     alt="">
 </div>
     <!-- Optional JavaScript -->
