--- a/Trivia11.html
+++ b/Trivia11.html
@@ -52,7 +52,7 @@
     <h1 id ='trivia'align="center">Who is Benson's boss?</h1>
     <!-- add image/gif -->
     <div class="v">
-    <img src="https://media2.giphy.com/media/zsmkSw01Gpg4g/giphy.gif" 
+    <img src="https://zombiesruineverything.files.wordpress.com/2013/07/angry-benson.gif" 
     alt="">
 </div>
     <!-- Optional JavaScript -->
